Updated CMakeLists.txt for MLV lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.13)
 project(activ_contour)
 
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(MY_PKG REQUIRED IMPORTED_TARGET MLV)
+
 set(SRCS
         main.cpp
         Snake.cpp
@@ -12,3 +15,6 @@ set(HEADERS
 
 
 add_executable(activ_contour ${SRCS} ${HEADERS})
+
+target_link_libraries(activ_contour PUBLIC
+    PkgConfig::MY_PKG)
